# cortesi-scurve

./: CLAUDE.md  Cargo.toml  DEV.md  README.md
.cargo/: config.toml
crates/egui-img/: Cargo.toml
crates/scurve/: Cargo.toml
crates/scurve-gui/: Cargo.toml  README.md
crates/scurve-gui/assets/: index.html
crates/scurve-gui/src/: about.rs  lib.rs  selection.rs  theme.rs  threed.rs  twod.rs  widgets.rs
crates/scurve-gui/tests/: web_build.rs
crates/scurve/src/: cmd.rs  main.rs  map.rs
crates/scurve/tests/: vis_boundary.rs
crates/spacecurve/: Cargo.toml  README.md
crates/spacecurve/benches/: patterns.rs
crates/spacecurve/examples/: hilbert.rs
crates/spacecurve/src/: lib.rs  ops.rs  point.rs
crates/spacecurve/src/curves/: hcurve.rs  hilbert.rs  hilbert2.rs  hilbert_common.rs  hilbertn.rs
crates/spacecurve/tests/: bijection.rs  curves.rs
xtask/: Cargo.toml
xtask/src/: main.rs
