[package]
name = "egui-img"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
eframe = "0.33"
egui = "0.33"
image = "0.25"
png = "0.18"

[lints]
workspace = true

[features]
default = []
# Enable eframe screenshot support for debug captures
__screenshot = ["eframe/__screenshot"]
