[package]
name = "scurve-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

# Enable building as both executable and library for web compilation
[lib]
crate-type = ["cdylib", "rlib"]

# Web binary target only
[[bin]]
name = "scurve-web"
path = "src/web.rs"

[features]
default = []
# Enable screenshot mode - app will save a screenshot and exit
__screenshot = ["eframe/__screenshot"]

[dependencies]
spacecurve.workspace = true
anyhow = "1.0"
egui = "0.33"
eframe = "0.33"
egui_commonmark = "0.22"
webbrowser = "1.0"
png = "0.18"

# (Bevy removed; using egui/eframe)

# Web-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Location",
    "UrlSearchParams",
] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen-futures = "0.4"
